GNOME Bugzilla – Bug 754323
[PATCH] Properties shouldn't be translated
Last modified: 2015-09-01 22:57:41 UTC
Many strings in gnome-dictionary are properties, which are invisible in the user interface (visible only in developer tools like Glade and gtk-inspector), and therefore shouldn't be marked for translation. It's unnecessary work for translators, and no other app in GNOME does that.
Created attachment 310352 [details] [review] Don't translate properties This patch removes the translation markers from the properties and removes files now without translations from POTFILES.in.
Attachment 310352 [details] pushed as e057699 - Don't translate properties
This is gnome-dictionary, not gnome-builder. :)
Very strange, all I did was a `git bz push` with the patch from the other project!
Could you try to mark the review of this patch as "none"? Bugzilla throws an error at me...
Attachment 310352 [details] pushed as 07f4793 - Don't translate properties