Don't translate properties

They are not user-visible.

https://bugzilla.gnome.org/show_bug.cgi?id=754323